# streamforge

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts  xtream_client.js
_bmad-output/: atdd-checklist-1-1-initialize-tauri-project-with-react-frontend.md  atdd-checklist-1-2-set-up-sqlite-database-with-diesel-orm.md  atdd-checklist-1-3-create-react-gui-shell-with-routing.md  atdd-checklist-1-4-implement-system-tray-integration.md  atdd-checklist-1-5-create-axum-http-server-foundation.md  atdd-checklist-1-6-add-auto-start-on-boot-capability.md  atdd-checklist-2-1-add-xtream-account-with-secure-credential-storage.md  atdd-checklist-2-2-test-xtream-connection-and-display-account-status.md  atdd-checklist-2-3-retrieve-and-store-channel-list-from-xtream.md  atdd-checklist-2-4-add-xmltv-source-management.md  atdd-checklist-2-5-parse-and-store-xmltv-epg-data.md  atdd-checklist-2-6-implement-scheduled-epg-refresh.md  atdd-checklist-3-1-implement-fuzzy-channel-matching-algorithm.md  atdd-checklist-3-10.md  atdd-checklist-3-11.md  atdd-checklist-3-2.md  atdd-checklist-3-4-auto-rematch-on-provider-changes.md  atdd-checklist-3-5-channel-enable-disable-for-plex.md  atdd-checklist-3-6-drag-and-drop-channel-reordering.md  atdd-checklist-3-7-bulk-channel-operations.md  atdd-checklist-3-8-manage-orphan-xtream-channels.md  atdd-checklist-3-9-implement-target-lineup-view.md  atdd-checklist-4-1.md  atdd-checklist-4-2-serve-xmltv-epg-endpoint.md  atdd-checklist-4-3.md  atdd-checklist-4-4.md  (+19 more)
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: generate-icons.sh  icon.icns
src-tauri/migrations/2026-01-19-000614-0000_create_settings/: down.sql  up.sql
src-tauri/migrations/2026-01-19-085711-0000_create_accounts/: down.sql  up.sql
src-tauri/migrations/2026-01-19-093730-0000_add_account_status_fields/: down.sql  up.sql
src-tauri/migrations/2026-01-19-135350-0000_create_xmltv_sources/: down.sql  up.sql
src-tauri/migrations/2026-01-19-140000-0000_create_xtream_channels/: down.sql  up.sql
src-tauri/migrations/2026-01-19-143121-0000_create_xmltv_channels/: down.sql  up.sql
src-tauri/migrations/2026-01-19-143127-0000_create_programs/: down.sql  up.sql
src-tauri/migrations/2026-01-19-200000-0000_add_epg_schedule_settings/: down.sql  up.sql
src-tauri/migrations/2026-01-19-210000-0000_create_channel_mappings/: down.sql  up.sql
src-tauri/migrations/2026-01-19-210001-0000_create_xmltv_channel_settings/: down.sql  up.sql
src-tauri/migrations/2026-01-19-220000-0000_create_event_log/: down.sql  up.sql
src-tauri/migrations/2026-01-20-000001-0000_add_synthetic_flag/: down.sql  up.sql
src-tauri/migrations/2026-01-20-000002-0000_add_m3u_performance_indexes/: down.sql  up.sql
src-tauri/migrations/2026-01-24-120108-0000_add_update_settings/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: accounts.rs  channels.rs  config.rs  epg.rs  logs.rs  matcher.rs  mod.rs  test_data.rs  update.rs  xmltv_channels.rs  xtream_sources.rs
src-tauri/src/credentials/: mod.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs  schema.rs
src-tauri/src/matcher/: auto_rematch.rs  fuzzy.rs  mod.rs  persistence.rs  scorer.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/server/: buffer.rs  epg.rs  failover.rs  handlers.rs  hdhr.rs  health.rs  m3u.rs  mod.rs  routes.rs  state.rs  stream.rs
src-tauri/src/xmltv/: fetcher.rs  mod.rs  parser.rs  types.rs
src-tauri/src/xtream/: client.rs  mod.rs  quality.rs  types.rs
src-tauri/tests/: http_server_test.rs
(+282 files in other folders)
